2009-11-12  Mark Rowe  <mrowe@apple.com>

        Rubber-stamped by Brady Eidson.

        Land updated results for file-url-mimetypes-2.html and file-url-mimetypes-3.html.

        * platform/mac-snowleopard/platform/mac/fast/loader/file-url-mimetypes-2-expected.txt: Copied from LayoutTests/platform/mac/fast/loader/file-url-mimetypes-2-expected.txt.
        * platform/mac-snowleopard/platform/mac/fast/loader/file-url-mimetypes-3-expected.txt: Copied from LayoutTests/platform/mac/fast/loader/file-url-mimetypes-3-expected.txt.
        * platform/mac/fast/loader/file-url-mimetypes-2-expected.txt:
        * platform/mac/fast/loader/file-url-mimetypes-3-expected.txt:

2009-11-12  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Unreviewed. Skipped new tests, a test that keeps failing despite
        not failing locally, and a new DnD test.

        * platform/gtk/Skipped:

2009-11-12  Eric Carlson  <eric.carlson@apple.com>

        Unreviewed, build fix.

        Skipped tests need path relative to LayoutTests folder, not just
        test name.

        * platform/gtk/Skipped:
        * platform/mac-leopard/Skipped:
        * platform/mac-tiger/Skipped:
        * platform/win/Skipped:

2009-11-12  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Dan Bernstein.

        <rdar://problem/7388969> Add DOM API for fullscreen video
        
        Tests for fullscreen <video> DOM API.

        * media/media-fullscreen-inline-expected.txt: Added.
        * media/media-fullscreen-inline.html: Added.
        * media/media-fullscreen-not-in-document-expected.txt: Added.
        * media/media-fullscreen-not-in-document.html: Added.
        * media/media-fullscreen.js: Added.

        * platform/gtk/Skipped:
        * platform/mac-leopard/Skipped:
        * platform/mac-tiger/Skipped:
        * platform/win/Skipped:
            Skipped on platforms that don't support fullscreen yet.

2009-11-12  Alexey Proskuryakov  <ap@apple.com>
