@@ -1,11 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
 <head>
-<link rel="stylesheet" href="../../../fast/js/resources/js-test-style.css">
+<link rel="stylesheet" href="../fast/js/resources/js-test-style.css">
 <script>
 var successfullyParsed = false;
 </script>
-<script src="../../../fast/js/resources/js-test-pre.js"></script>
+<script src="../fast/js/resources/js-test-pre.js"></script>
 </head>
 <body id="body">
 
@@ -35,6 +35,6 @@ var successfullyParsed = false;
     successfullyParsed = true;
 </script>
 
-<script src="../../../fast/js/resources/js-test-post.js"></script>
+<script src="../fast/js/resources/js-test-post.js"></script>
 </body>
 </html>
